Fixed tests with input date